--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#">
      <img src="./assets/images/logo-rjclick.png" alt="logo do rjclick">
         </a>
-
+<!-- testa do github -->
      <div class="search show-desktop">
         <img src="./assets/images/search-icon.svg" alt="Pesquisa">
         <input type="text" placeholder="Pesquisar ...">
